# wgu-capstone

./: .gitignore  README.md
.github/actions/build-clean/: Dockerfile  action.yml  (+1 more)
.github/scripts/: awscurl-retry.sh  collect-build-artifacts.sh  hash-zips.sh  poll-model-stage.sh
.github/workflows/: main.yml
application/api/: Dockerfile  application.py  requirements.txt
application/web/: package.json
infra/: .terraform.lock.hcl  acm.tf  apigateway.tf  apigatewayv2.tf  aws_acm_certificate.tf  aws_apigatewayv2_api.tf  aws_apigatewayv2_api_mapping.tf  aws_apigatewayv2_domain_name.tf  aws_apigatewayv2_integration.tf  aws_apigatewayv2_route.tf  aws_apigatewayv2_stage.tf  aws_iam_instance_profile.tf  aws_iam_policy.tf  aws_iam_role.tf  aws_iam_role_policy.tf  aws_iam_role_policy_attachment.tf  aws_instance.tf  aws_lambda_function.tf  aws_lambda_permission.tf  aws_route53_record.tf  aws_route53_zone.tf  aws_s3_bucket.tf  aws_security_group.tf  aws_ssm_document.tf  aws_ssm_parameter.tf  backend.tf  cloudfront.tf  dynamodb.tf  ec2.tf  ecs.tf  iam.tf  lambda.tf  main.tf  module_aws_lambda_logging_policy.tf  null_resource.tf  route53.tf  s3.tf  ssm.tf
infra/assets/: bootstrap_model.sh  capstone_api_user_data.sh  exclusion_list.txt
pipeline/stage1_ingest/: Function.fs  MetadataRecord.fs  Metadatabase.fs  Parser.fs  Program.fs  ingest.fsproj
pipeline/stage2_clean/: Cargo.toml  execute.rs  main.rs
pipeline/stage4_test/: build.gradle
pipeline/stage5_deploy/: deploy.go  go.mod  go.sum
utilities/metadata_augmentation/: CMakeLists.txt  metadata_augmentation.cpp
(+35 files in other folders)
